consumer %60 tamam, ama anlamlı veri ayıklaması için main i değiştireceğim. Sonrasında simulasyon modları eklenecek